last try at fixing colour swap formatting on mobile before bed

--- a/styles/sass/partials/_global.scss
+++ b/styles/sass/partials/_global.scss
@@ -106,15 +106,13 @@ img {
 /* Colour Change box styles */
 .colourChanges {
     @include mq('tablet'){
-        // flex-direction: row;
-        margin: 10px auto 0 auto;
         padding: 0 10px;
+        margin: 10px auto 0 auto;
     }
     border: 3px solid #000;
-    margin: 0 auto;
+    margin: 5px auto 0 auto;
     padding: 0;
     width: fit-content;
-    // flex-direction: column;
     .colourBox {
         @include mq('tablet'){
             width: 1.2rem;
@@ -124,7 +122,7 @@ img {
         width: 0.9rem;
         height: 0.9rem;
         border: 1px solid #000;
-        margin: auto;
+        margin: auto 1px;
         p {
             text-align: center;
             padding: 0;
