--- a/styles/style.css
+++ b/styles/style.css
@@ -359,7 +359,7 @@ img {
 /* Colour Change box styles */
 .colourChanges {
   border: 3px solid #000;
-  margin: 0 auto;
+  margin: 5px auto 0 auto;
   padding: 0;
   width: -webkit-fit-content;
   width: -moz-fit-content;
@@ -367,15 +367,15 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .colourChanges {
-    margin: 10px auto 0 auto;
     padding: 0 10px;
+    margin: 10px auto 0 auto;
   }
 }
 .colourChanges .colourBox {
   width: 0.9rem;
   height: 0.9rem;
   border: 1px solid #000;
-  margin: auto;
+  margin: auto 1px;
 }
 @media only screen and (min-width: 768px) {
   .colourChanges .colourBox {
